<resources>
    <string name="app_name">FFTW</string>
    <string name="action_settings">Settings</string>
    <string name="fftw_init">Init</string>
    <string name="fftw_dft_1d">fftw_dft_1d</string>
    <string name="fftw_dft_r2c_1d">fftw_dft_r2c_1d</string>
    <string name="fftwf_dft_r2c_1d">fftwf_dft_r2c_1d</string>
    <string name="fftwf_dft_r2c_1d_thread">fftwf_dft_r2c_1d_thread</string>
    <string name="fftwf_dft_r2c_1d_thread_measure">fftwf_dft_r2c_1d_thread_measure</string>
    <string name="fftw_dft_2d">fftw_dft_2d</string>
    <string name="fftw_dft_r2c_2d">fftw_dft_r2c_2d</string>
    <string name="fftwf_dft_r2c_2d">fftwf_dft_r2c_2d</string>
    <string name="fftwf_dft_r2c_2d_thread">fftwf_dft_r2c_2d_thread</string>
    <string name="fftwf_dft_r2c_2d_thread_measure">fftwf_dft_r2c_2d_thread_measure</string>
</resources>
